fix layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,7 +51,6 @@ html, body {
   padding: 0;
   background: #000;
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 :root {
